# SimpleHierarchy

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  reference.rst  requirements.txt
docs/about/: index.rst
docs/api_reference/: index.rst  simple_hierarchy.hierarchal_model.rst  simple_hierarchy.tree.rst
docs/contributor_guide/: index.rst
docs/user_guide/: index.rst
simple_hierarchy/: __init__.py  hierarchal_model.py  tree.py
simple_hierarchy/examples/: sample.ipynb
simple_hierarchy/test/: test_heirarchal_model.py  test_tree.py
simple_hierarchy/tests/: __init__.py  test_heirarchal_model.py  test_tree.py
src/simple_hierarchy/: __init__.py  hierarchal_model.py  tree.py
src/simple_hierarchy/examples/: sample.ipynb
tests/: __init__.py  test_heirarchal_model.py  test_tree.py
