[tool.poetry]
name = "simple-hierarchy"
version = "1.0.2"
description = "Simple hierarchal models in PyTorch."
authors = ["Rajiv Sarvepalli <rajiv@sarvepalli.net>"]
homepage = "https://github.com/rajivsarvepalli/SimpleHierarchy"
repository = "https://github.com/rajivsarvepalli/SimpleHierarchy"
license = "MIT"
readme = "README.md"
keywords = ["pytorch", "hierarchical-models", "neural-network", "machine-learning", "hierarchal-networks", "python",
        "pytorch hierarchy networks",
        "pytorch cnn",
        "cnn hierarchy",
        "hierarchy networks",
        "simple hierarchy",
        "pytorch hierarchy",
        "torch hierarchy",
        "torch cnn",
]
documentation = "https://simplehierarchy.readthedocs.io"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent"
]



[tool.poetry.dependencies]
python = "^3.7"
torch = {version = "^1.7.0", python = "^3.7"}
numpy = "1.19.3"
importlib-metadata = {version = "^3.3.0", python = "<3.8"}



[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.1"
mypy = "^0.790"
typeguard = "^2.10.0"
flake8-annotations = "^2.4.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.8"
xdoctest = "^0.15.0"
Sphinx = "^3.4.1"
isort = "^5.7.0"
codecov = "^2.1.11"
sphinx-copybutton = "^0.3.1"
pydata-sphinx-theme = "^0.4.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["simple_hierarchy"]

[tool.coverage.report]
show_missing = true
fail_under = 100
