[tool.poetry]
name = "simple-hierarchy"
version = "1.0.2"
description = "Simple hierarchal models in PyTorch."
authors = ["Rajiv Sarvepalli <rajiv@sarvepalli.net>"]
homepage = "https://github.com/rajivsarvepalli/SimpleHierarchy"
repository = "https://github.com/rajivsarvepalli/SimpleHierarchy"
license = "MIT"
readme = "README.md"
keywords = ["pytorch", "hierarchical-models", "neural-network", "machine-learning", "hierarchal-networks", "python",
        "pytorch hierarchy networks",
        "pytorch cnn",
        "cnn hierarchy",
        "hierarchy networks",
        "simple hierarchy",
        "pytorch hierarchy",
        "torch hierarchy",
        "torch cnn",
]
documentation = "https://simplehierarchy.readthedocs.io"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent"
]



[tool.poetry.dependencies]
python = "^3.7"
torch = {version = "^1.7.0", python = "^3.7"}
numpy = "1.21.0"
importlib-metadata = {version = ">=3.3,<5.0", python = "<3.8"}



[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest-cov = "^2.12.1"
black = "^21.6b0"
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.1"
mypy = "^0.812"
typeguard = "^2.12.1"
flake8-annotations = "^2.4.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.8"
xdoctest = "^0.15.5"
Sphinx = "^4.0.2"
isort = "^5.9.2"
codecov = "^2.1.11"
sphinx-copybutton = "^0.4.0"
pydata-sphinx-theme = "^0.6.3"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["simple_hierarchy"]

[tool.coverage.report]
show_missing = true
fail_under = 100
